see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

08-Aug-2010 Ron Severdia
 # Cleaned up Atomic template (ready to go once sample data is committed).
 
07-Aug-2010 Jean-Marie Simonet
 # [#21750] Default module position
 # [#21744] Implementing drill-down options for weblinks and newsfeeds categorieS menu items
 # [#21749] IE7 patches to the Options modal. Thanks Andrea.
 # [#21628] unpublish core extensions. Thanks Mark
 
06-Aug-2010 Ian MacLennan
 # [#21598] Unable to logout ( front end ) if cache enabled
 # [#21630] Dropdown order in plug in manager
 # [#21632] Dropdown order in article manager
 # [#21633] Dropdown order in category manager
 # [#21634] Dropdown order in menu manager
 # [#21637] Dropdown order in module manager
 # [#21667] Menu manager : "Save & New" and "Save as copy" tasks are not implemented

06-Aug-2010 Jean-Marie Simonet
 # [#21740] Media Manager Submenu not indicating active option. Thanks Andrea.

05-Aug-2010 Jean-Marie Simonet
 # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan
 # [#21433] Title disappear when you select the menu item type. Thanks Bill
 #$ [#21358] Breadcrumbs "You are here" text displays regardless of Breadcrumbs settings. Thanks Michael.
 #$ [#21731] Newsfeeds /menu-items params correction + changes to weblinks. Thanks Bill.

04-Aug-2010 Jean-Marie Simonet
 [#21662] Single contact view not treating category access issue correctly. Thanks Elin.
 
04-Aug-2010 Andrew Eddie
 # Fixed issue [#21536] admin/com_users: report view. Is this being used or worked on?