@@ -307,6 +307,10 @@ p.footer-tip {
 	background: url(../images/menu/icon-16-user.png) 3px 3px no-repeat;
 }
 
+#module-status .backloggedin-users {
+	background: url(../images/menu/icon-16-back-user.png) 3px 3px no-repeat;
+}
+
 #module-status .logout {
 	background: url(../images/menu/icon-16-logout.png) 3px 3px no-repeat;
 }
@@ -1973,6 +1977,7 @@ a.jgrid:hover {	text-decoration: none;}
 .icon-16-themes						{	background-image: url(../images/menu/icon-16-themes.png);	}
 .icon-16-trash						{	background-image: url(../images/menu/icon-16-trash.png);	}
 .icon-16-user						{	background-image: url(../images/menu/icon-16-user.png);	}
+.icon-16-back-user					{	background-image: url(../images/menu/icon-16-back-user.png);	}
 .icon-16-writemess					{	background-image: url(../images/menu/icon-16-writemess.png);	}
 .icon-16-newsfeeds					{	background-image: url(../images/menu/icon-16-newsfeeds.png);	}
 .icon-16-newsfeeds-cat				{	background-image: url(../images/menu/icon-16-newsfeeds-cat.png);	}
