@@ -57,11 +57,11 @@ $app = JFactory::getApplication();
 		</div>
 	</div>
 	<div id="header-box">
-		<div id="module-status">
-			<jdoc:include type="modules" name="status"  />
-		</div>
 		<div id="module-menu">
 			<jdoc:include type="modules" name="menu" />
+		</div>
+		<div id="module-status">
+			<jdoc:include type="modules" name="status"  />
 		</div>
 		<div class="clr"></div>
 	</div>
