@@ -259,6 +259,10 @@ span.unwritable		{ color: #a20000;}
 	background: url(../images/menu/icon-16-user.png) 3px 3px no-repeat;
 }
 
+#module-status .backloggedin-users {
+	background: url(../images/menu/icon-16-back-user.png) 3px 3px no-repeat;
+}
+
 #module-status .logout {
 	background: url(../images/menu/icon-16-logout.png) 3px 3px no-repeat;
 }
